--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
 background: linear-gradient(to right, lightgreen, teal);
-ont-family: Verdana;
+font-family: Verdana;
 margin:0;
 }
 header{
@@ -11,10 +11,15 @@ header h1{
 color:mediumspringgreen; 
 text-shadow: 2px 2px 5px navy;
 font-size: 5vw;
+text-align: center;
+font-family: Verdana;
+margin:0;
 }
 header h3{
 Color:navy;
 font-size: 2vw;
+text-align: center;
+margin:0;
 }
 nav a{
 text-decoration:none;
@@ -36,7 +41,8 @@ margin:0;
 }
 main  h2{
 color:navy;
-font-size: 3em;
+font-size: 2em;
+text-align: center;
 }
 main p{
 color:white;
@@ -45,6 +51,7 @@ font-size: 1em;
 footer p{
 color:white;
 font-size: 1em;
+text-align: center;
 }
 nav{
 background:rgba(0,0,0,.2);
@@ -61,8 +68,10 @@ background:rgba(0,0,0,.2);
 grid-area:footer;
 }
 .grid {
+grid-gap:.5em; 
 display:grid;
-grid-template-columns:25% auto;
+grid-template-columns:auto 1fr;
+margin:1%;
 grid-template-areas:
 "header header"
 "nav main"
