--- a/style.css
+++ b/style.css
@@ -84,6 +84,29 @@ footer p {
   color:white;
   margin:0;
 }
+aside {
+  grid-area:aside;
+  background:rgba(0,0,0,.2);
+  padding:5px;
+}
+
+aside h2 {
+color:blue;
+padding: 0 5px;
+text-align:center;
+}
+aside a{
+color: white;
+padding: 10px 0;
+font-size: 1.5em;
+}
+aside a:hover{
+color: navy;
+}
+aside li{
+color: navy;
+padding: 10px 0;
+}
 
 /*---------------------------Mobile Layout Styles----------------------------*/
 .container1 { /*for index.html*/
@@ -95,6 +118,7 @@ footer p {
     "header"
     "nav"
     "main"
+    "aside"
     "footer";   
     }
 
@@ -132,6 +156,7 @@ footer p {
   grid-template-areas:
     "header header"
     "nav main"
+    "aside aside"
     "footer footer";
     }
 
@@ -158,11 +183,11 @@ footer p {
 @media only screen and (min-width: 960px)  {
 
 .container1 { /*for index.html*/
-  grid-template-columns:auto 1fr;
+  grid-template-columns:auto 1fr 25%;
   grid-template-areas:
-    "header header"
-    "nav main"
-    "footer footer";
+    "header header header"
+    "nav main aside"
+    "footer footer footer";
     }
 	
 
