--- a/style.css
+++ b/style.css
@@ -107,7 +107,43 @@ aside li{
 color: navy;
 padding: 10px 0;
 }
-
+article {
+  background:rgba(0,0,0,.2);
+  padding:5px;
+}
+.top{
+grid-area:top;
+}
+.top h2{
+color: navy;
+text-align:center;
+}
+.top p{
+color: white;
+}
+.middle{
+grid-area:middle;
+}
+.middle h2{
+color: navy;
+text-align: center;
+}
+.middle p{
+color: white;
+}
+.bottom{
+grid-area:bottom;
+}
+.bottom h2{
+color: navy;
+text-align: center;
+}
+.bottom p{
+color: white;
+}
+main img{
+margin: auto;
+}
 /*---------------------------Mobile Layout Styles----------------------------*/
 .container1 { /*for index.html*/
   display: grid;
@@ -121,7 +157,20 @@ padding: 10px 0;
     "aside"
     "footer";   
     }
-
+.container2 { /*for blog.html*/
+  display: grid;
+  grid-template-columns:100%;
+  grid-gap:.5em;
+  margin:1%;
+  grid-template-areas:
+    "header"
+    "nav"
+    "main"
+    "top"
+    "middle"
+    "bottom"
+    "footer";
+    }
 /*This stuff is for the hamburger menu*/
 .toggleNav {
     display:grid; /*This is what allows the hamburger icon and "Menu" to display*/
@@ -159,6 +208,17 @@ padding: 10px 0;
     "aside aside"
     "footer footer";
     }
+@media only screen and (min-width: 480px)  {
+.container2 { /*for index.html*/
+  grid-template-columns:auto 1fr;
+  grid-template-areas:
+    "header header"
+    "nav main"
+    "top top"
+    "middle middle"
+    "bottom bottom" 
+    "footer footer";
+    }
 
 
 /* Below will change from hamburger menu to side navigation*/
@@ -181,16 +241,25 @@ padding: 10px 0;
 
 /*-----------------------Desktop Media Query------------------------*/
 @media only screen and (min-width: 960px)  {
-
 .container1 { /*for index.html*/
-  grid-template-columns:auto 1fr 25%;
+  grid-template-columns:auto 1fr;
   grid-template-areas:
     "header header header"
     "nav main aside"
     "footer footer footer";
     }
 	
-
+@media only screen and (min-width: 960px)  {
+.container2 { /*for index.html*/
+  grid-template-columns:auto 1fr 1.5fr;
+  grid-template-areas:
+    "header header header"
+    "nav main top"
+    "nav main middle"
+    "nav main bottom"
+    "footer footer footer";
+    }
 	}
+
 
 
