--- a/style.css
+++ b/style.css
@@ -182,7 +182,7 @@ form {
     background-color:darkseagreen;
     width:90%;
     margin:auto;
-    color:white;
+    color:navy;
     padding:10px;
 }
 .div1 {
